--- a/project.config.json
+++ b/project.config.json
@@ -20,9 +20,22 @@
 			"current": -1,
 			"list": []
 		},
-		"miniprogram": {
+		"plugin": {
 			"current": -1,
 			"list": []
+		},
+		"game": {
+			"list": []
+		},
+		"miniprogram": {
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "setting",
+					"pathName": "pages/setting/setting"
+				}
+			]
 		}
 	}
 }
