--- a/project.config.json
+++ b/project.config.json
@@ -28,12 +28,13 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
 					"name": "setting",
-					"pathName": "pages/setting/setting"
+					"pathName": "pages/setting/setting",
+					"query": ""
 				}
 			]
 		}
