--- a/project.config.json
+++ b/project.config.json
@@ -29,14 +29,7 @@
 		},
 		"miniprogram": {
 			"current": -1,
-			"list": [
-				{
-					"id": -1,
-					"name": "setting",
-					"pathName": "pages/setting/setting",
-					"query": ""
-				}
-			]
+			"list": []
 		}
 	}
 }
