--- a/project.config.json
+++ b/project.config.json
@@ -28,8 +28,15 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": 0,
+					"name": "setting",
+					"pathName": "pages/launch/launch",
+					"query": "url=../setting/setting"
+				}
+			]
 		}
 	}
 }
