--- a/project.config.json
+++ b/project.config.json
@@ -32,7 +32,7 @@
 			"list": [
 				{
 					"id": 0,
-					"name": "setting",
+					"name": "redirect",
 					"pathName": "pages/launch/launch",
 					"query": "url=../setting/setting"
 				}
