--- a/project.config.json
+++ b/project.config.json
@@ -28,7 +28,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -37,10 +37,10 @@
 					"query": "url=../setting/setting"
 				},
 				{
-					"id": -1,
+					"id": 1,
 					"name": "index",
 					"pathName": "pages/launch/launch",
-					"query": "url=../index/index"
+					"query": "url=../index/add/add"
 				}
 			]
 		}
