--- a/project.config.json
+++ b/project.config.json
@@ -28,7 +28,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -38,7 +38,7 @@
 				},
 				{
 					"id": 1,
-					"name": "index",
+					"name": "add",
 					"pathName": "pages/launch/launch",
 					"query": "url=../index/add/add"
 				}
