--- a/project.config.json
+++ b/project.config.json
@@ -28,7 +28,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -38,9 +38,9 @@
 				},
 				{
 					"id": 1,
-					"name": "add",
+					"name": "task",
 					"pathName": "pages/launch/launch",
-					"query": "url=../index/add/add"
+					"query": "url=../index/task/task"
 				}
 			]
 		}
